add simple-commit example

--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -107,3 +107,6 @@ required-features = ["test-dev-graph"]
 [[example]]
 name = "proof-size"
 required-features = ["cost-estimator"]
+
+[[example]]
+name = "simple-commit"
